# pi3-crazyflie

./: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~  quad_launch.launch  quad_launch.launch~  quad_launch.xml~
include/lwpr/: Makefile  Makefile.in  lwpr_aux.h  lwpr_config.h
msg/: #quadrotor_state.msg#  angles.msg  angles.msg~  full_quadrotor_state.msg  full_quadrotor_state.msg~  motor_msg.msg~  quad_state.msg~  quadrotor_state.msg  quadrotor_state.msg~  rpyt.msg  rpyt.msg~
scripts/: crazyflie_acc.py  crazyflie_angles.py  crazyflie_angles.py~  crazyflie_commander.py  crazyflie_commander.py~  crazyflie_logger.py~  crazyflie_state.py  crazyflie_state.py~  pi3_goal.py  pi3_goal.py~  transfer_node.py~
src/: controller_node.cpp~  pi3_main_quad.cu  pi3_main_quad.cu~  pi3_main_vf.cu~  quadrotor_simulator.cpp  quadrotor_simulator.cpp~  simulator_node.cpp~
src/lwpr/: #lwpr.c#  Makefile  Makefile.in  liblwpr_la-lwpr.lo  liblwpr_la-lwpr_aux.lo  liblwpr_la-lwpr_binio.lo  liblwpr_la-lwpr_math.lo  liblwpr_la-lwpr_mem.lo  liblwpr_la-lwpr_xml.lo  lwpr_aux.c
src/lwpr/.deps/: liblwpr_la-lwpr.Plo  liblwpr_la-lwpr_aux.Plo  liblwpr_la-lwpr_binio.Plo  liblwpr_la-lwpr_math.Plo  liblwpr_la-lwpr_mem.Plo  liblwpr_la-lwpr_xml.Plo
src/lwpr/.libs/: liblwpr.la  liblwpr.lai  liblwpr.so.1
